--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -29,7 +29,10 @@ spec:
      - name: my-hostpath-volume
        hostPath:
          path: /tmp
- # 볼륨에서         
+ # 볼륨에서 hostPath 항목을 정의함으로써 호스트의 /tmp를 포드의 /etc/data에 마운트함
+ 
+ kubectl apply -f hostpath-pod.yaml
+ kubectl         
 ```
 
 2. emptyDir - 포드의 컨테이너 간에 볼륨을 공유하기 위해서 사용
@@ -39,5 +42,5 @@ spec:
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzc1MjgyMjhdfQ==
+eyJoaXN0b3J5IjpbMTUzNzUzOTM2OSwtMTIzNzUyODIyOF19
 -->
