09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md updated from https://stackedit.io/

--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -32,7 +32,7 @@ spec:
  # 볼륨에서 hostPath 항목을 정의함으로써 호스트의 /tmp를 포드의 /etc/data에 마운트함
  
  kubectl apply -f hostpath-pod.yaml
- kubectl         
+ kubectl exec -it hostpath-pod touch /etc/data/mydata        
 ```
 
 2. emptyDir - 포드의 컨테이너 간에 볼륨을 공유하기 위해서 사용
@@ -42,5 +42,5 @@ spec:
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUzNzUzOTM2OSwtMTIzNzUyODIyOF19
+eyJoaXN0b3J5IjpbLTQ2MDIwODg0NSwtMTIzNzUyODIyOF19
 -->
