09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md updated from https://stackedit.io/

--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -10,7 +10,7 @@
 > ```
 
 ## 9.1 로컬 볼륨: hostPath, emptyDir
-1. HostPath - 호스트와 볼륨을 공유하기 위해 사용
+ 1. HostPath - 호스트와 볼륨을 공유하기 위해 사용
 ```yaml
 hostpath-pod.yaml
 apiVersion: v1
@@ -34,6 +34,8 @@ spec:
  kubectl apply -f hostpath-pod.yaml
  kubectl exec -it hostpath-pod -- touch /etc/data/mydata        
 ```
+디플로이먼트의 포드에 장애가 생겨 다른 노드로 포드가 옮겨갔을 경우, 이전 노드에 저장된 데이터 사용 불가.
+
 
 2. emptyDir - 포드의 컨테이너 간에 볼륨을 공유하기 위해서 사용
 
@@ -42,6 +44,6 @@ spec:
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NjQ1NTY1MzcsLTQ2MDIwODg0NSwtMT
-IzNzUyODIyOF19
+eyJoaXN0b3J5IjpbLTE1ODk4ODE1MDgsLTE3NjQ1NTY1MzcsLT
+Q2MDIwODg0NSwtMTIzNzUyODIyOF19
 -->
