09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md updated from https://stackedit.io/

--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -35,15 +35,16 @@ spec:
  kubectl exec -it hostpath-pod -- touch /etc/data/mydata        
 ```
 디플로이먼트의 포드에 장애가 생겨 다른 노드로 포드가 옮겨갔을 경우, 이전 노드에 저장된 데이터 사용 불가.
+CAdvisor와 같은 모니터링 툴을 쿠버네티스의 모든 워커노드에 배포야하한다면 옳은 선택
 
 
 2. emptyDir - 포드의 컨테이너 간에 볼륨을 공유하기 위해서 사용
-
+- 비어있는 상태로 생성되며 포드가 삭제되면 
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODk4ODE1MDgsLTE3NjQ1NTY1MzcsLT
-Q2MDIwODg0NSwtMTIzNzUyODIyOF19
+eyJoaXN0b3J5IjpbLTc2MDg3OTI1OCwtMTc2NDU1NjUzNywtND
+YwMjA4ODQ1LC0xMjM3NTI4MjI4XX0=
 -->
