09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md updated from https://stackedit.io/

--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -39,12 +39,23 @@ CAdvisor와 같은 모니터링 툴을 쿠버네티스의 모든 워커노드에
 
 
 2. emptyDir - 포드의 컨테이너 간에 볼륨을 공유하기 위해서 사용
-- 비어있는 상태로 생성되며 포드가 삭제되면 
+- 비어있는 상태로 생성되며 포드가 삭제되면 emptyDir에 저장돼 있던 데이터도 함께 삭제됨
+```yaml
+emptydir-pod.yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: emptydir-pod
+spec:
+  containers:
+  - name: content-creator
+  - 
+```
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2MDg3OTI1OCwtMTc2NDU1NjUzNywtND
+eyJoaXN0b3J5IjpbMTcxNjU1NzQ5OCwtMTc2NDU1NjUzNywtND
 YwMjA4ODQ1LC0xMjM3NTI4MjI4XX0=
 -->
