09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md updated from https://stackedit.io/

--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -49,13 +49,21 @@ metadata:
 spec:
   containers:
   - name: content-creator
-  - 
+    image: alicek106/alpine-wget:latest
+    args: ["tail", "-f", "/dev/null"]
+    volumeMounts:
+    - name: my-emptydir-volume
+      mountPath: /data
+  - name: apache-webserver
+    image: httpd:2
+    volumeMounts:
+    - name: m
 ```
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxNjU1NzQ5OCwtMTc2NDU1NjUzNywtND
-YwMjA4ODQ1LC0xMjM3NTI4MjI4XX0=
+eyJoaXN0b3J5IjpbLTExMzA0MDA0MTAsLTE3NjQ1NTY1MzcsLT
+Q2MDIwODg0NSwtMTIzNzUyODIyOF19
 -->
