09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md updated from https://stackedit.io/

--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -53,17 +53,21 @@ spec:
     args: ["tail", "-f", "/dev/null"]
     volumeMounts:
     - name: my-emptydir-volume
-      mountPath: /data
+      mountPath: /data #1.이 컨테이너가 /data파일을 생성하면
+      
   - name: apache-webserver
     image: httpd:2
     volumeMounts:
-    - name: m
+    - name: my-emptydir-volume
+      mountPath: /usr/local/apache2/htdocs/ # 2. 아파치 웹 서버에 접근 할 수 있다.
+  volumes:
+  - name: my-empt    
 ```
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzA0MDA0MTAsLTE3NjQ1NTY1MzcsLT
+eyJoaXN0b3J5IjpbLTIwMTI5Nzc1OTgsLTE3NjQ1NTY1MzcsLT
 Q2MDIwODg0NSwtMTIzNzUyODIyOF19
 -->
