--- a/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
+++ b/09.퍼스시턴스 볼륨과 퍼시스턴트 볼륨 클레.md
@@ -61,13 +61,14 @@ spec:
     - name: my-emptydir-volume
       mountPath: /usr/local/apache2/htdocs/ # 2. 아파치 웹 서버에 접근 할 수 있다.
   volumes:
-  - name: my-empt    
+  - name: my-emptydir-volume
+    emptyDir: {} # 포드 내에서 파일을 공유하는 emptyDir    
 ```
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTI5Nzc1OTgsLTE3NjQ1NTY1MzcsLT
-Q2MDIwODg0NSwtMTIzNzUyODIyOF19
+eyJoaXN0b3J5IjpbMTIzMjgyODMxLC0xNzY0NTU2NTM3LC00Nj
+AyMDg4NDUsLTEyMzc1MjgyMjhdfQ==
 -->
